# kelompok8_esp32-s3_rust

./: .gitignore  Cargo.toml  README  README.md  data_sensor.txt  diagram.json  grafik.plt  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
src/: main.rs
